# mcp-server-qdrant

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: voyage-ai-integration-summary.md
docs/jj/implementations/20250901-dcb3299ff/: PROJECT_COMPLETE.md  milestone-01-metadata-analysis-filterable-fields-design.md  milestone-02-enterprise-tools-implementation.md  milestone-03-deployment-validation.md
docs/jj/implementations/20250901-xotlpslz/: PROJECT_COMPLETE.md  milestone-02-enterprise-tools-implementation.md  milestone-03-deployment-validation.md
docs/jj/implementations/20250901-zysnlpsw/: milestone-01-add-themes-parameter.md  (+4 more)
docs/jj/plans/: 20250901-dcb3299ff-FEAT-extend-existing-logic-expose-deep-meta-search-tools.md  20250901-fix-themes-FIX-enterprise-search-themes-parameter.md  20250901-remove-memory-tools-REFACTOR-enterprise-only.md  20250901-zmsstzsq-FEAT-theme-tags-full-text-search.md  20250908-ac236116-FEAT-voyage-ai-embedding-provider.md  20250909-tnxrwywo-FEAT-outlook-schema-tools.md
examples/: claude-desktop-enterprise.json  enterprise-env-vars.sh
src/mcp_server_qdrant/: enterprise_config.py  enterprise_config_outlook.py  enterprise_tools.py  mcp_server.py  outlook_tools.py  qdrant.py  settings.py
src/mcp_server_qdrant/common/: filters.py
src/mcp_server_qdrant/embeddings/: factory.py  types.py  voyageai.py
tests/: test_embedding_factory.py  test_enterprise_config.py  test_enterprise_integration.py  test_enterprise_themes_fulltext.py  test_enterprise_tools.py  test_mcp_server_themes.py  test_settings.py  test_voyageai_integration.py
(+8 files in other folders)
